# pro-context

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  install.ps1  install.sh  procontext.example.yaml  pyproject.toml
.claude/skills/changelog-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: coding-guidelines.md
docs/cli/: README.md  command-guidelines.md  doctor.md  installation.md  installer-maintenance.md
docs/reference/: cache-strategy.md
docs/research/: llms-txt-deployment-patterns.md  llms-txt-discovery-research.md  llms-txt-resolution-strategy.md
docs/reviews/: pending-items.md  spec-gap-analysis.md
docs/specs/: 01-competitive-analysis.md  01-functional-spec.md  02-functional-spec.md  02-technical-spec.md  03-implementation-guide.md  03-technical-spec.md  04-api-reference.md  04-implementation-guide.md  05-library-resolution-proposed.md  05-library-resolution.md  05-security-spec.md  06-api-reference.md  06-registry-build-system.md  07-testing-and-qa.md
src/pro_context/: registry.py  resolver.py  server.py  state.py
src/pro_context/data/: known-libraries.json
src/pro_context/tools/: resolve_library.py
src/procontext/: __init__.py  cache.py  config.py  errors.py  fetcher.py  identity.py  logging_config.py  outline.py  parser.py  protocols.py  registry.py  resolver.py  schedulers.py  search.py  server.py  state.py  transport.py
src/procontext/cli/: cmd_db.py  cmd_doctor.py  cmd_serve.py  cmd_setup.py  main.py
src/procontext/cli/doctor/: __init__.py  cache_check.py  checks.py  models.py  output.py
src/procontext/mcp/: lifespan.py  server.py  startup.py
src/procontext/models/: __init__.py  cache.py  registry.py  tools.py
src/procontext/registry/: __init__.py  local.py  storage.py  update.py
src/procontext/tools/: _shared.py  get_library_docs.py  read_outline.py  read_page.py  resolve_library.py  search_page.py
tests/: conftest.py
tests/integration/: conftest.py  test_cli.py  test_mcp_error_envelope.py  test_mcp_wire_contract.py  test_read_outline.py  test_read_page.py  test_read_page_compaction.py  test_read_page_md_probe.py  test_resolve_library.py  test_search_page.py  test_startup_errors.py  test_stdout_guard.py  test_tools.py  tool_test_support.py
tests/unit/: test_cache.py  test_cli_db.py  test_cli_doctor.py  test_cli_serve.py  test_config.py  test_fetcher.py  test_first_run_fetch.py  test_http_transport.py  test_identity.py  test_outline.py  test_parser.py  test_read_page_helpers.py  test_registry.py  test_resolver.py  test_scheduler.py  test_search.py  test_version.py
